--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myweather",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.28.0",
     "recharts": "^2.12.3",
     "lucide-react": "^0.363.0"
   },
@@ -20,5 +20,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "overrides": {
+    "lucide-react": "$lucide-react"
   }
 }
